fixing contrast issues

--- a/styles/base.css
+++ b/styles/base.css
@@ -83,7 +83,7 @@ footer p{
     padding: 0;
     text-align: center;
     font-size: 25px;
-    color: black;
+    color: white;
     margin-top: 0;
     margin-bottom: 0;
 
